# SmartOpenCV

./: LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/tech/huqi/smartopencvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/third_part/opencv/include/opencv2/: cvconfig.h
app/src/main/java/tech/huqi/smartopencvdemo/: FdActivity.java  MainActivity.java
app/src/main/res/layout/: face_detect_surface_view.xml
app/src/opencv/java/tech/huqi/smartopencvdemo/: FdActivity.java
app/src/opencv/res/layout/: face_detect_surface_view.xml
app/src/smartopencv/java/tech/huqi/smartopencvdemo/: FdActivity.java
app/src/smartopencv/res/layout/: face_detect_surface_view.xml
app/src/test/java/tech/huqi/smartopencvdemo/: ExampleUnitTest.java
openCVLibrary411/: build.gradle
openCVLibrary411/src/main/: AndroidManifest.xml
openCVLibrary411/src/main/java/org/opencv/android/: OpenCVLoader.java
openCVLibrary411/src/main/java/org/opencv/calib3d/: Calib3d.java  StereoSGBM.java
openCVLibrary411/src/main/java/org/opencv/core/: Core.java
openCVLibrary411/src/main/java/org/opencv/dnn/: Dnn.java  Net.java
openCVLibrary411/src/main/java/org/opencv/features2d/: MSER.java
openCVLibrary411/src/main/java/org/opencv/imgcodecs/: Imgcodecs.java
openCVLibrary411/src/main/java/org/opencv/imgproc/: Imgproc.java  (+1 more)
smartopencv/: build.gradle
smartopencv/src/main/: AndroidManifest.xml
smartopencv/src/main/res/values/: attrs.xml  strings.xml  styles.xml
(+26 files in other folders)
